# VDisPlay

./: .gitignore  CMakeLists.txt  PROJECT_CONTEXT.md  README.md  README.pt-BR.md  build.bat  config.example.json  pubspec.yaml
lib/: audio_manager.dart  device_selector.dart  help_overlay.dart  key_shortcuts.dart  l10n.dart  main.dart  native_bindings.dart  resolution_selector.dart  video_preview.dart  window_utils.dart
native/: audio_capture.c  device_manager.c  video_capture.c
native/include/: audio_capture.h  common.h  device_manager.h  video_capture.h
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  video_texture.cpp  video_texture.h
